Update the title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <!-- partial:index.partial.html -->
 <main>
-  <h1>Awesome Landing Page</h1>
+  <h1>This is my very first Web Site The Awesome Landing Page</h1>
   <div class="key-features">
     <div class="feature">
       <img src="
